# timemath

./: CMakeLists.txt  README.md  timemath.c  timemath.h
src/: main.c  main.h
